--- a/Prelim-Exam/JAVASCRIPT/index.html
+++ b/Prelim-Exam/JAVASCRIPT/index.html
@@ -41,7 +41,7 @@
 
 <!-- Input Form -->
 <form id="recordForm">
-    <input type="text" id="studentId" placeholder="StudentID" required>
+    <input type="number" id="studentId" placeholder="StudentID" required>
     <input type="text" id="firstName" placeholder="First Name" required>
     <input type="text" id="lastName" placeholder="Last Name" required>
     <input type="number" id="lab1" placeholder="Lab Work 1" required>
